# platform.core.security.drm-client

./: AUTHORS  CMakeLists.txt  drm-client.pc.in  project.config
TC/: build.sh  execute.sh
TC/unit/: Makefile  drmcontentsdef.h  tslist  utc_drmclient_drm_get_constraint_info_func.c  utc_drmclient_drm_get_content_info_func.c  utc_drmclient_drm_get_contraint_info_func.c  utc_drmclient_drm_get_data_func.c  utc_drmclient_drm_get_file_info_func.c  utc_drmclient_drm_get_file_type_func.c  utc_drmclient_drm_get_license_status_func.c  utc_drmclient_drm_is_action_allowed_func.c  utc_drmclient_drm_is_drm_file_func.c  utc_drmclient_drm_process_request_func.c
debian/: README  README.Debian  changelog  control  drm-client-0.postinst  drm-client-dev.install.in  rules
include/: drm_client.h  drm_client_ipc.h  drm_client_log.h  drm_client_types.h
packaging/: drm-client.changes  drm-client.spec
service/: drm_client.cpp  drm_client_ipc.cpp
test/: Makefile  test_drm_client.cpp
